crates/biome_cli/tests/snapshots/main_cases_diagnostics/logs_the_appropriate_messages_according_to_set_diagnostics_level.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --diagnostic-level=error test.js
```

## `biome.json`

```json
{
  "files": {
    "includes": ["test.js"]
  },
  "linter": {
    "rules": {
      "suspicious": {
        "noDebugger": "warn"
      }
    }
  }
}
```

## `test.js`

```js
debugger;
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
