crates/biome_cli/tests/snapshots/main_cases_diagnostics/max_diagnostics_minimal.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `src/file_0.js`

```js
a == b
```

## `src/file_1.js`

```js
a == b
```

## `src/file_2.js`

```js
a == b
```

## `src/file_3.js`

```js
a == b
```

## `src/file_4.js`

```js
a == b
```

## `src/file_5.js`

```js
a == b
```

## `src/file_6.js`

```js
a == b
```

## `src/file_7.js`

```js
a == b
```

# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
src/file_0.js:1:3 lint/suspicious/noDoubleEquals  FIXABLE  

```

```block
src/file_0.js format 

```

```block
src/file_1.js:1:3 lint/suspicious/noDoubleEquals  FIXABLE  

```

```block
src/file_1.js format 

```

```block
src/file_2.js:1:3 lint/suspicious/noDoubleEquals  FIXABLE  

```

```block
src/file_2.js format 

```

```block
src/file_3.js:1:3 lint/suspicious/noDoubleEquals  FIXABLE  

```

```block
src/file_3.js format 

```

```block
src/file_4.js:1:3 lint/suspicious/noDoubleEquals  FIXABLE  

```

```block
src/file_4.js format 

```

```block
src/file_5.js:1:3 lint/suspicious/noDoubleEquals  FIXABLE  

```

```block
src/file_6.js:1:3 lint/suspicious/noDoubleEquals  FIXABLE  

```

```block
src/file_7.js:1:3 lint/suspicious/noDoubleEquals  FIXABLE  

```

```block
Checked 8 files in <TIME>. No fixes applied.
Found 16 errors.
```
