crates/biome_cli/tests/snapshots/main_cases_diagnostics/should_fail_when_max_diagnostics_is_zero.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome ci --max-diagnostics 0 src
```

## `src/file.js`

```js
  statement(  )  
```

# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
